Make Buildship work on Java 9
This change adds initial Java 9 compatibility to Buildship by
implementing the following changes:

 - Update Tooling API to 4.3-rc-3
 - Update wrapper to 4.3-rc-4
 - Update Gson to 2.7
 - Update Groovy to 2.4.12
 - Launch Eclipse with --add-modules=ALL-SYSTEM option on Java 9
 - Fix broken tests
 - Ignore tests that are using older Gradle versions
 - Use e47 build that support Java 9
 - GradleClasspathProvider filters unresolved rt classpath too

At the moment older Gradle versions cannot be used when Buildship
is executed on Java 9. With the new JDK versioning scheme we have
lost backward compatibility in this platform. We will try to make
it work but there's no guarantee that it will be done.

--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ def eclipseVersionAgnosticDependencies = [
     'org.slf4j.api'                     : '1.7.2',
     'org.slf4j.simple'                  : '1.7.2',
     'com.google.guava'                  : '15.0.0',
-    'com.google.gson'                   : '2.2.4',
+    'com.google.gson'                   : '2.7.0',
     'org.apache.log4j'                  : '1.2.15',
     'org.eclipse.swtbot.eclipse.finder' : '2.2.1',
     'org.eclipse.swtbot.junit4_x'       : '2.2.1',
@@ -66,7 +66,7 @@ eclipseBuild {
             'com.ibm.icu'                           : '4.4.2',
             'org.eclipse.jface.databinding'         : '1.6.0',
             'org.eclipse.jface.text'                : '3.8.2',
-            'org.junit'                             : '4.11.0',
+            'org.junit'                             : '4.12.0',
             "$swtPluginId"                          : '3.100.1'
         ] + eclipseVersionAgnosticDependencies
     }
@@ -99,7 +99,7 @@ eclipseBuild {
             'com.ibm.icu'                           : '50.1.1',
             'org.eclipse.jface.databinding'         : '1.6.200',
             'org.eclipse.jface.text'                : '3.8.101',
-            'org.junit'                             : '4.11.0',
+            'org.junit'                             : '4.12.0',
             "$swtPluginId"                          : '3.102.1'
         ] + eclipseVersionAgnosticDependencies
     }
@@ -132,7 +132,7 @@ eclipseBuild {
             'com.ibm.icu'                           : '52.1.1',
             'org.eclipse.jface.databinding'         : '1.6.200',
             'org.eclipse.jface.text'                : '3.9.2',
-            'org.junit'                             : '4.11.0',
+            'org.junit'                             : '4.12.0',
             "$swtPluginId"                          : '3.103.2'
         ] + eclipseVersionAgnosticDependencies
     }
@@ -165,7 +165,7 @@ eclipseBuild {
             'org.eclipse.jface.databinding'         : '1.7.0',
             'org.eclipse.jface.text'                : '3.10.0',
             'com.ibm.icu'                           : '54.1.1',
-            'org.junit'                             : '4.11.0',
+            'org.junit'                             : '4.12.0',
             "$swtPluginId"                          : "3.104.0"
         ] + eclipseVersionAgnosticDependencies
     }
@@ -272,6 +272,7 @@ subprojects {
     // use common bundled testing depenendencies for all test plugins
     plugins.withType(eclipsebuild.TestBundlePlugin) {
         dependencies {
+            compile "org.codehaus.groovy:groovy-all:$groovyLibVersion"
             bundled "org.spockframework:spock-core:$spockLibVersion"
             bundled "cglib:cglib-nodep:$cglibLibVersion"
             bundled ("com.gradleware.tooling:testing-junit:$toolingCommonsVersion") {
